...
            android:text="Chats"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
            android:layout_marginRight="3dp"/>

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Home"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
...
            android:text="Profile"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
            android:layout_marginRight="3dp"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Logout"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
...
