<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/edit_text_bg"
        android:paddingLeft="5dp"/>

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:background="@drawable/edit_text_bg"
        android:paddingLeft="5dp"/>

    <TextView
        android:id="@+id/IDLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="USC ID"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/ID"
        app:layout_constraintStart_toStartOf="@+id/ID" />

    <EditText
        android:id="@+id/ID"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:background="@drawable/edit_text_bg"
        android:paddingLeft="5dp"/>

    <TextView
        android:id="@+id/roleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Role: (Undergrad, Grad, Faculty, or Staff)"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/role"
        app:layout_constraintStart_toStartOf="@+id/role" />

    <EditText
        android:id="@+id/role"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID"
        android:background="@drawable/edit_text_bg"
        android:paddingLeft="5dp"/>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password (Must have at least 6 characters)"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/role"
        android:background="@drawable/edit_text_bg"
        android:paddingLeft="5dp"/>

    <Button
        android:id="@+id/photoChooser"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_bg"
        android:text="Choose Photo"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:onClick="goToGallery"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="99dp"
        android:layout_height="86dp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:layout_marginTop="18dp"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:textColor="@color/white"
        android:text="Sign Up"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoChooser"
        android:background="@drawable/btn_bg"
        android:onClick="goToMain"/>

</androidx.constraintlayout.widget.ConstraintLayout>